@@ -40,6 +40,7 @@
 	- merge signatures into header after reading from package.
 	- RPM_BIN_TYPE malloc'ed when retrieved through headerGetEntry().
 	- add headerFreeData() to free any data malloc'ed during retrieval.
+	- preserve exact image of original header when installing/upgrading.
 
 3.0.6 -> 4.0
 	- use DIRNAMES/BASENAMES/DIRINDICES not FILENAMES in packages and db.
